--- a/components/paper-input/test/a11y.html
+++ b/components/paper-input/test/a11y.html
@@ -10,41 +10,43 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>core-input a11y tests</title>
+  <title>paper-input a11y tests</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
   <script src="../../webcomponentsjs/webcomponents.js"></script>
   <script src="../../web-component-tester/browser.js"></script>
 
-  <link href="../core-input.html" rel="import">
+  <link href="../../core-input/core-input.html" rel="import">
+
+  <link href="../paper-input-decorator.html" rel="import">
+  <link href="../paper-autogrow-textarea.html" rel="import">
+
+  <style>
+    paper-input-decorator {
+      width: 400px;
+    }
+  </style>
 
 </head>
 <body>
 
-  <input id="input1" is="core-input" placeholder="label">
-  <input id="input2" is="core-input" disabled>
+  <paper-input-decorator id="decorator1" label="input">
+    <input id="input1" is="core-input">
+  </paper-input-decorator>
+
+  <br>
 
   <script>
 
+    var d1 = document.getElementById('decorator1');
     var i1 = document.getElementById('input1');
-    var i2 = document.getElementById('input2');
 
-    test('aria-label set to placeholder', function(done) {
-      assert.strictEqual('label', i1.getAttribute('aria-label'));
-      i1.placeholder = 'new label';
-      asyncPlatformFlush(function() {
-        assert.strictEqual('new label', i1.getAttribute('aria-label'));
-        done();
-      });
-    });
+    suite('accessibility', function() {
 
-    test('aria-disabled is set', function(done) {
-      assert.ok(i2.hasAttribute('aria-disabled'));
-      i2.removeAttribute('disabled');
-      asyncPlatformFlush(function() {
-        assert.ok(!i2.hasAttribute('aria-disabled'));
-        done();
+      test('aria-label set on input', function() {
+        assert.strictEqual(i1.getAttribute('aria-label'), d1.label);
       });
+
     });
 
   </script>
