--- a/components/paper-input/test/index.html
+++ b/components/paper-input/test/index.html
@@ -17,13 +17,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <body>
   <script>
     WCT.loadSuites([
-      'activate-event.html',
-      'basic.html',
-      'multi.html',
-      'next-previous.html',
-      'selected-attr-prop.html',
-      'template-repeat.html',
-      'content.html'
+      'a11y.html',
+      'autogrow.html',
+      'decorator.html'
     ]);
   </script>
 </body>
