--- a/components/paper-tabs/paper-tab.html
+++ b/components/paper-tabs/paper-tab.html
@@ -34,7 +34,7 @@ To change the ink color:
 
 <link rel="import" href="../paper-ripple/paper-ripple.html">
 
-<polymer-element name="paper-tab" attributes="noink" role="tab" inline flex auto center-center horizontal layout>
+<polymer-element name="paper-tab" attributes="noink" role="tab" inline flex center-center horizontal layout>
 <template>
 
   <link rel="stylesheet" href="paper-tab.css">
