center main menu
menu centrado

--- a/components/my-components/menu-inicio-test.html
+++ b/components/my-components/menu-inicio-test.html
@@ -32,6 +32,8 @@ ul {
 
 .dashboard {
   margin: 0 auto;
+  margin-left: 10%;
+  margin-right: 10%;
   width: 100%;
   padding: 1em;
   -webkit-transform: translateX(200px);
@@ -224,41 +226,36 @@ ul {
     <ul class="tiles">
       <div class="col1 clearfix">
         <paper-ripple class="tile tile-big slideTextUp" >
-          <div><p class=""></p></div>
+          <p class="">Titulo Card</p>
         </paper-ripple>
         <paper-ripple class="acerca tile tile-small slideTextRight" >
-          <div><p class="">titulo</p></div>
+          <p class="">titulo</p>
         </paper-ripple>
         <paper-ripple class="envivo tile tile-small " >
-          <p class="icon-calendar-alt-fill"></p>
+          <p class="">Titulo Card</p>
         </paper-ripple>
         <paper-ripple class="certificate tile tile-small slideTextRight">
-          <div><p class=""></p></div>
-          <div><p>Tile</p></div>
+          <p class="">Titulo Card</p> 
         </paper-ripple>
         <paper-ripple class="blog tile tile-small slideTextRight">
-          <div><p class=""></p></div>
-          <div><p>Tile</p></div>
+          <p class="">Titulo Card</p>
         </paper-ripple>
       </div>
 
       <div class="col2 clearfix">
 
         <paper-ripple class="redes tile tile-small-2" >
-          <p class=""></p>
+          <p class="">Titulo Card</p>
         </paper-ripple>
         <paper-ripple class="calendario tile tile-small-2" >
-          <p class=""></p>
+          <p class="">Titulo Card</p>
         </paper-ripple>
-        <paper-ripple class="start-tools tile" >
-          <p class=""></p>
-        </paper-ripple>
-      </div>
+        <paper-ripple class="start-tools tile" ></paper-ripple>
 
+      </div>
 
     </ul>
   </div>
-
   </template>
 </polymer-element>
     
