--- a/components/my-components/menu-inicio-test.html
+++ b/components/my-components/menu-inicio-test.html
@@ -1,347 +1,83 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../paper-ripple/paper-ripple.html">
+<link rel="import" href="../paper-shadow/paper-shadow.html">
+<link rel="import" href="../paper-shadow/paper-shadow.css">
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script>
+
+</script>
 <polymer-element name="menu-inicio-test" noscript>
-  <template>
-    <style>
-  
-/*======================= media queries for animations =======================*/
+    <template>
+        <style>
+            section > * {
+                margin: 6px 1px;
+            }
 
-* {
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0
-}
+            .card{
+                position: relative;
+                display: inline-block;
+                width: 180px;
+                height: 200px;
+                vertical-align: top;
+                background-color: #fff;
+            }
 
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table
-}
+            @media only screen and (max-width: 944px){
+                .eliminar{
+                    display: none;
+                }
 
-html {
-  height: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden
-}
+            }
 
-
-ul {
-  list-style-type: none
-}
-
-.dashboard {
-  margin: 0 auto;
-  margin-left: 10%;
-  margin-right: 10%;
-  width: 100%;
-  padding: 1em;
-  -webkit-transform: translateX(200px);
-  -ms-transform: translateX(200px);
-  -o-transform: translateX(200px);
-  transform: translateX(200px);
-  opacity: 0;
-  -webkit-animation: start 1s ease-out forwards;
-  -o-animation: start 1s ease-out forwards;
-  animation: start 1s ease-out forwards
-}
-
-@-webkit-keyframes start {
-  0% {
-    -webkit-transform: translateX(200px);
-    opacity: 0
-  }
-
-  50% {
-    opacity: 1
-  }
-
-  100% {
-    -webkit-transform: translateX(0);
-    opacity: 1
-  }
-}
-
-@keyframes start {
-  0% {
-    -webkit-transform: translateX(200px);
-    -ms-transform: translateX(200px);
-    -o-transform: translateX(200px);
-    transform: translateX(200px);
-    opacity: 0
-  }
-
-  50% {
-    opacity: 1
-  }
-
-  100% {
-    -webkit-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
-    opacity: 1
-  }
-}
-
-.col1,
-.col2 {
-  width: 99%;
-  margin: 1em auto
-}
-
-
-.tile {
-  float: left;
-  margin: 0 auto 1%;
-  color: white;
-  font-size: 1.3em;
-  text-align: center;
-  height: 8em;
-  font-weight: 300;
-  overflow: hidden;
-  cursor: pointer;
-  position: relative;
-  background-color: #fff;
-  color: #333;
-  position: relative;
-  -webkit-transition: background-color 0.2s ease-out;
-  -o-transition: background-color 0.2s ease-out;
-  transition: background-color 0.2s ease-out
-}
-
-.banner {
-  width: 100%;
-  height: 20em; /* banner */
-  background: #00cc66;
-}
-
-.tile-small {
-  width: 23.9%;
-  margin-right: 0.5em;
-  height: 190px;
-}
-.tile-small-2 {
-  width: 52%;
-  height: 206px;
-  margin-right: 2%;
-}
-.start-tools{
-  width: 52%;
-  margin-top: 4px;
-  height: 190px;
-  margin-right: 2%;
-}
-.acerca{
-  background: #ee82ee url(../../images/acerca.svg) no-repeat;
-  background-position: center;
-}
-.envivo{
-  background: #fa8072 url(../../images/al_aire.svg) no-repeat;
-  background-position: center;
-}
-.certificate{
-  background: #98fb98 url(../../images/certifica.svg) no-repeat;
-  background-position: center;
-}
-.blog{
-  margin-right: 0px;
-  background: #87cefa url(../../images/blog.svg) no-repeat;
-  background-position: center;
-}
-.start-tools{
-  background: #f0e68c url(../../images/acerca.svg) no-repeat;
-  background-position: center;
-}
-.calendario{
-  background: #98fb98 url(../../images/calendar.svg) no-repeat;
-  background-position: center;
-}
-.redes{
-  background: #c0c0c0 url(../../images/acerca.svg) no-repeat;
-  background-position: center;
-}
-/*======================= media queries =======================*/
-
-@media screen and (max-width: 480px) {     /* #mobile */
-  .dashboard{
-    margin: 0px 0px;
-    overflow: hidden;
-    height: auto;
-  }
-  .banner{
-    height: 11em;
-  }
-
-  .col1 {
-    float: left;
-    margin-right: 1%;
-    width: 100%;
-    margin-bottom: 0px;
-  }
-  .col2{
-    margin-top: 0px;
-    float: left;
-    margin-right: 1%;
-    width: 100%
-  }
-  .media-query{
-    background: red;
-  }
-  .col1 paper-ripple{
-    display: block;
-    width: 100%;
-  }
-  .col2 paper-ripple{
-    width: 100%;
-  }
-}
-
-@media only screen and (min-width: 481px) and (max-width: 779px) { /*  tablets */
-  .col1 {
-    float: left;
-    width: 100%;
-  }
-  .col2{
-    float: left;
-    margin-right: 0%;
-    width: 50%
-  }
-  .col2{
-    width: 100%;
-  }
-  .media-query{
-    background: green;
-  }
-  .dashboard{
-    margin: 0px 0px;
-    overflow: hidden;
-    height: auto;
-  }
-  .banner{
-    height: 15em;
-  }
-  .acerca, .envivo, .certificate, .blog{
-    width: 49.5%;
-    padding: 0px;
-    margin: 1px;
-  }
-  .col1{
-    margin-bottom: 1px; 
-  }
-  .col2{
-    margin-top: 1px;
-  }
-  .col2 paper-ripple{
-    margin: 1px;
-    padding: 0px;
-    width: 49.5%;
-    display: inline-block;
-  }
-}
-
-@media only screen and (min-width : 780px) and (max-width : 1024px) {
-  .col1{
-    float: left;
-    margin-right: .5%;
-    width: 100%
-  }
-  .col2{
-    float: left;
-    margin-right: .5%;
-    width: 31%;
-  }
-  .col1 {
-    margin-left: 2em
-  }
-  .page-title{
-    font-size:3.5em;
-  }
-  .media-query{
-    background: yellow;
-  }
-  .acerca, .envivo, .certificate, .blog, .start-tools,.calendario,.redes{
-    background-size: 5em;
-  }
-  .dashboard{
-    margin: 0px 0px;
-    overflow: hidden;
-    height: auto;
-  }
-  .col1{
-    margin-bottom: 1px; 
-  }
-  .col2{
-    margin-top: 1px;
-  }
-  .col2 paper-ripple{
-    margin: 2px;
-    padding: 0px;
-    width: 100%;
-    display: inline-block;
-  }
-
-}
-
-@media only screen and (min-width: 1024px){
-  .col1{
-    float: left;
-    margin-right: .5%;
-    width: 61%
-  }
-  .col2{
-    float: left;
-    margin-right: .5%;
-    width: 31%;
-  }
-  .col1 {
-    margin-left: 2em
-  }
-  .page-title{
-    font-size:3.5em;
-  }
-  .media-query{
-    background: blue;
-  }
-}
-
-</style>
-<h1 class="media-query">BIENVENIDO</h1>
-  <div class="dashboard clearfix">
-    <ul class="tiles">
-      <div class="col1 clearfix">
-        <paper-ripple class="banner recenteringTouch tile" >
-          <p class="">Titulo Card</p>
-        </paper-ripple>
-        <paper-ripple class="acerca tile tile-small " >
-          <p class="">titulo</p>
-        </paper-ripple>
-        <paper-ripple class="envivo tile tile-small " >
-          <p class="">Titulo Card</p>
-        </paper-ripple>
-        <paper-ripple class="certificate tile tile-small ">
-          <p class="">Titulo Card</p> 
-        </paper-ripple>
-        <paper-ripple class="blog tile tile-small ">
-          <p class="">Titulo Card</p>
-        </paper-ripple>
-      </div>
-
-      <div class="col2 clearfix">
-
-        <paper-ripple class="redes tile tile-small-2" >
-          <p class="">Titulo Card</p>
-        </paper-ripple>
-        <paper-ripple class="calendario tile tile-small-2" >
-          <p class="">Titulo Card</p>
-        </paper-ripple>
-        <paper-ripple class="start-tools tile" ></paper-ripple>
-
-      </div>
-
-    </ul>
-  </div>
-  </template>
+        </style>
+        <h1 class="media-query">BIENVENIDO</h1>
+        <section style="float:left; margin-right:4px;" class="eliminar">
+            <div  class="card" onmouseover="$(this).children('paper-shadow').attr('z','3');"  onmouseout="$(this).children('paper-shadow').attr('z','1');" style="width:740px; height:412px;">
+                <div class="label" fit>Banner</div>
+                <paper-shadow  z="1" ></paper-shadow>
+                <paper-ripple class="recenteringTouch" fit></paper-ripple>
+            </div>
+        </section>
+        <section>
+            <div  class="card"  onmouseover="$(this).children('paper-shadow').attr('z','3');"  onmouseout="$(this).children('paper-shadow').attr('z','1');">
+                <div class="label" fit>Redes</div>
+                <paper-shadow  z="1" ></paper-shadow>
+                <paper-ripple class="recenteringTouch" fit></paper-ripple>
+            </div>
+            <br class="eliminar" />
+            <div  class="card"  onmouseover="$(this).children('paper-shadow').attr('z','3');"  onmouseout="$(this).children('paper-shadow').attr('z','1');">
+                <div class="label" fit>Calendario</div>
+                <paper-shadow  z="1" ></paper-shadow>
+                <paper-ripple class="recenteringTouch" fit></paper-ripple>
+            </div>
+            <br class="eliminar" />
+            <div  class="card"  onmouseover="$(this).children('paper-shadow').attr('z','3');"  onmouseout="$(this).children('paper-shadow').attr('z','1');">
+                <div class="label" fit>Acerca</div>
+                <paper-shadow  z="1" ></paper-shadow>
+                <paper-ripple class="recenteringTouch" fit></paper-ripple>
+            </div>
+            <div  class="card"  onmouseover="$(this).children('paper-shadow').attr('z','3');"  onmouseout="$(this).children('paper-shadow').attr('z','1');">
+                <div class="label" fit>En Vivo</div>
+                <paper-shadow  z="1" ></paper-shadow>
+                <paper-ripple class="recenteringTouch" fit></paper-ripple>
+            </div>
+            <div  class="card"  onmouseover="$(this).children('paper-shadow').attr('z','3');"  onmouseout="$(this).children('paper-shadow').attr('z','1');">
+                <div class="label" fit>Certificate</div>
+                <paper-shadow  z="1" ></paper-shadow>
+                <paper-ripple class="recenteringTouch" fit></paper-ripple>
+            </div>
+            <div  class="card"  onmouseover="$(this).children('paper-shadow').attr('z','3');"  onmouseout="$(this).children('paper-shadow').attr('z','1');">
+                <div class="label" fit>Blog</div>
+                <paper-shadow  z="1" ></paper-shadow>
+                <paper-ripple class="recenteringTouch" fit></paper-ripple>
+            </div>
+            <div  class="card"  onmouseover="$(this).children('paper-shadow').attr('z','3');"  onmouseout="$(this).children('paper-shadow').attr('z','1');">
+                <div class="label" fit>Start-Tools</div>
+                <paper-shadow  z="1" ></paper-shadow>
+                <paper-ripple class="recenteringTouch" fit></paper-ripple>
+            </div>
+        </section>
+    </template>
 </polymer-element>
-    
-    
+
+
